--- a/Plot iNET-X.csproj
+++ b/Plot iNET-X.csproj
@@ -77,16 +77,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PcapDotNet.Base">
-      <HintPath>..\..\DrawGraph\lib\x64\PcapDotNet.Base.dll</HintPath>
+      <HintPath>..\..\_C#_libaries\PcapDotNet.Binaries.0.10.0.67076\PcapDotNet.Binaries.0.10.0.67076.x64\PcapDotNet.Base.dll</HintPath>
     </Reference>
     <Reference Include="PcapDotNet.Core">
-      <HintPath>..\..\DrawGraph\lib\x64\PcapDotNet.Core.dll</HintPath>
+      <HintPath>..\..\_C#_libaries\PcapDotNet.Binaries.0.10.0.67076\PcapDotNet.Binaries.0.10.0.67076.x64\PcapDotNet.Core.dll</HintPath>
     </Reference>
     <Reference Include="PcapDotNet.Core.Extensions">
-      <HintPath>..\..\DrawGraph\lib\x64\PcapDotNet.Core.Extensions.dll</HintPath>
+      <HintPath>..\..\_C#_libaries\PcapDotNet.Binaries.0.10.0.67076\PcapDotNet.Binaries.0.10.0.67076.x64\PcapDotNet.Core.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="PcapDotNet.Packets">
-      <HintPath>..\..\DrawGraph\lib\x64\PcapDotNet.Packets.dll</HintPath>
+      <HintPath>..\..\_C#_libaries\PcapDotNet.Binaries.0.10.0.67076\PcapDotNet.Binaries.0.10.0.67076.x64\PcapDotNet.Packets.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -99,7 +99,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="ZedGraph">
-      <HintPath>..\..\DrawGraph\lib\zedGraph\ZedGraph.dll</HintPath>
+      <HintPath>..\..\_C#_libaries\zedgraph_dll_v515\zedgraph_dll_v5.1.5\ZedGraph.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
